--- a/personal/_posts/2021-11-30-Gear.markdown
+++ b/personal/_posts/2021-11-30-Gear.markdown
@@ -6,6 +6,8 @@ categories: personal
 tags: tools
 ---
 
+![HHKB](./assets/personal/hhkb.JPG)
+
 When I mainly use a single iMac for my daily workstation. It was a very straight forward choice for me to use the Magic Keyboard and Magic Trackpad.
 
 When I start working with different technologies and start daily driving Windows and Linux. I wanted a Apple-like experience using the machine. Both Windows 10 and Pop!OS do support both the keyboard and trackpad but never work as well as on native MacOS.
@@ -14,13 +16,13 @@ Most workplaces will supply standard keyboard and mice, which I got ergonomic is
 
 My current setup is not cheap, and it is a very personal choice. It would be very nice gusture, but I am not expecting my workplace compensate for it.
 
-This is not a sponsored content. 
+~This is not a sponsored content.~
 
 ## Keyboard [`HHKB Pro HYBIRD Type-S`](https://hhkeyboard.us/hhkb)
 
 > Honourable mention - [Keychron K2](https://www.keychron.com/)
 
-As much as I enjoyed my time scrolling at [r/MechancialKeyboards](https://www.reddit.com/r/MechanicalKeyboards/). There are few important criticas for me when picking a keyboard. 
+As much as I enjoyed my time at [r/MechancialKeyboards](https://www.reddit.com/r/MechanicalKeyboards/). There are few important criticas for me when picking a keyboard. 
 
 > My HHKB DIP Settings
 > 1 - Off
@@ -32,11 +34,13 @@ As much as I enjoyed my time scrolling at [r/MechancialKeyboards](https://www.re
 
 ### 1. Physical Layout 
 
-I preferred the Mac layout, which has the Alt/option key and Windows/command key swapped. I also preferred the 65% layout, which the whole function keys and numberic pad are removed, that enables shorter distance travel to the mice. 
+![HHKB Layout ref from https://deskthority.net/wiki/HHKB_Professional2](./assets/personal/HHKB_Pro_2_-_keyboard_layout_editor_-_final.png)
 
-At first I was very happy about the Keychrone K2 because it satisfied my 2 requirements. It even has a switch to quickly swap between the Alt/option and Windows/command key. However, the HHKB layout took this to the next level, by placing the frequently used Control key and Delete key much closer to your fingers.
+I preferred the Mac layout, which has the ⌥ ( **option/alt** ) key and ⌘ ( **Windows/command** ) key swapped. I also preferred the 65% layout, which the whole function keys and numberic pad are removed, that enables shorter distance travel to the mice. 
 
-I initially thought the HHKB layout would destroy my ability to type on other keyboard. Happily I can report that  is totally not a concern after my 1st month of use. I can quickly adjust between keyboard layouts without any noticeable slow down.
+At first I was very happy about the Keychrone K2 because it satisfied my 2 requirements. It even has a switch to quickly swap between ⌥ and ⌘ key. However, the HHKB layout took this to the next level, by placing the frequently used Control key and Delete key much closer to your fingers.
+
+I initially thought the HHKB layout would destroy my ability to type on other keyboards. Happily I can report that it is totally not a concern after my 1st month of use. I can quickly adjust between keyboard layouts without any noticeable slow down.
 
 One extra bonus advantage for the HHKB layout is the function key shortcuts, which is also placed on the home row and encouraged touch typing on those keys. I found touch typing the arrow keys are much more efficient then any other 65% layout with deticated keys.
 
@@ -44,18 +48,19 @@ One extra bonus advantage for the HHKB layout is the function key shortcuts, whi
 
 I found it is espically important to have easy pairing to mulitple device, so I can switch the keyboard on at least 3 computers ( Windows, Mac, iPad ). The HHKB type-s provided 4 bluetooth connections, which is 1 more than K2 and other options when I research. I have not found the use case for it yet.
 
-Having a USB wired option is a bonus when the monitor supports hardware KVM ( such as DELL 3219 and 3918 ). 
-It is also a bonus when waking up Windows and Pop!_OS from sleep via bluetooth device has been a struggle for me.
+Having a USB wired option is a bonus when the monitor supports Keyboard, Video and Mouse (KVM) feature. It is also a bonus when waking up Windows and Pop!_OS from sleep via bluetooth device has been a struggle for me.
 
 ### 3. Delight ( Sound and Feel )
 
-The Keychrone K2 was my first mechancial keyboard, and I picked brown switches for quiteness. After all, software engineering is a social activites and having a clicky keyboard is definitely disrubive. However, I found the brown switches in practice still bit too loud and the Topre silent switches is definitely a  quieter options. 
+The Keychrone K2 was my first mechancial keyboard, and I picked brown switches for quiteness. After all, software engineering is a social activites and having a clicky keyboard is definitely disrubive. However, I found the brown switches in practice still bit too loud and the Topre silent switches is definitely a quieter options. 
 
 I found myself not care too much about the tactical feeling from the switches, but the textured key cap does play a big part in brining me joy in day to day usage. 
 
 ## Mouse [`Logitech MX Master 3`](https://www.logitech.com/en-nz/products/mice/mx-master-3.910-005698.html)
 
-For the pointing device, it is a much simplier choice, since I have only few requirements. Having said that, it is very hard to find an alternative to the Magic Trackpad.
+![MX Master 3](./assets/personal/mx-master-3.jpg)
+
+For the pointing device, it is a simplier choice since I have only few requirements. Having said that, it is very hard to find an alternative to the Magic Trackpad.
 
 ### 1. Natural Smooth Scrolling
 
@@ -73,7 +78,7 @@ It is last but definitely not the least, even if I could do most of the task on 
 
 ### Compliants - Scroll Reliability and Linux version of [LogiOption](https://www.logitech.com/en-nz/product/options#top)
 
-The MX Master 3 is a good product, but it is hard to recommend because it is very often for it too went into "hyper sensitive" mode and require "Turning it on and off again"TM.
+The MX Master 3 is a good product, but it is hard to recommend because it is very often for it too went into "hyper sensitive" mode and require **Turning it on and off again™**.
 
 ## Reference
 
